--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit>=1.28.0
+streamlit>=1.25.0
 pandas>=1.5.0
 numpy>=1.21.0
 plotly>=5.0.0
@@ -6,5 +6,8 @@ torch>=1.9.0
 transformers>=4.20.0
 sentence-transformers>=2.2.0
 faiss-cpu>=1.7.0
-datasets>=2.0.0
+datasets>=2.8.0,<2.15.0
 scikit-learn>=1.0.0
+pdfplumber>=0.7.0
+nltk>=3.7.0
+pyarrow>=10.0.0,<15.0.0
