--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-streamlit>=1.25.0
-pandas>=1.5.0
-numpy>=1.21.0
-plotly>=5.0.0
-torch>=1.9.0
-transformers>=4.20.0
-sentence-transformers>=2.2.0
-faiss-cpu>=1.7.0
-datasets>=2.8.0,<2.15.0
-scikit-learn>=1.0.0
-pdfplumber>=0.7.0
-nltk>=3.7.0
-pyarrow>=10.0.0,<15.0.0
+streamlit==1.47.1
+pandas==2.3.1
+numpy==2.1.3
+plotly==6.2.0
+torch==2.7.1
+transformers==4.54.1
+sentence-transformers==5.0.0
+faiss-cpu==1.11.0
+datasets==4.0.0
+scikit-learn==1.7.1
+pdfplumber==0.11.7
+nltk==3.9.1
